package maze;

public class ABox extends MBox {


    public ABox(int x, int y, Maze maze) {
        super(x, y, maze);
        // TODO Auto-generated constructor stub
    }

    @Override
    public boolean isArrival() {
        // TODO Auto-generated method stub
        return true;
    }

}
