@startuml

title __MAZE's Class Diagram__\n

  namespace maze {
    class maze.ABox {
        + ABox()
        + isArrival()
    }
  }
  

  namespace maze {
    class maze.DBox {
        + DBox()
        + isDeparture()
    }
  }
  

  namespace maze {
    class maze.EBox {
        + EBox()
        + isEmpty()
        + toString()
    }
  }
  

  namespace maze {
    abstract class maze.MBox {
        - X : int
        - Y : int
        + MBox()
        + belongsToShortestPath()
        + getLabel()
        + getSuccessors()
        + getX()
        + getY()
        + isArrival()
        + isDeparture()
        + isEmpty()
        + isWall()
        + setArrival()
        + setDeparture()
        + setEmpty()
        + setWall()
        + setX()
        + setY()
    }
  }
  

  namespace maze {
    class maze.MFactory {
        + createMazeModel()
    }
  }
  

  namespace maze {
    class maze.Maze {
        ~ maze : MBox[][]
        - length : int
        - observers : Set<ModelObserver>
        - width : int
        + Maze()
        + addObserver()
        + clearMaze()
        + clearShortestPath()
        + createArrivalBox()
        + createDepartureBox()
        + createEmptyBox()
        + createWallBox()
        + getDepartures()
        + getDistance()
        + getHeigth()
        + getMazeBox()
        + getMazeFactory()
        + getNumberOfBoxes()
        + getSuccessors()
        + getVertex()
        + getVertexes()
        + getWidth()
        + getarrival()
        + getshortestPaths()
        + removeObserver()
        + solve()
        + validate()
        # notifyObservers()
    }
  }
  

  namespace maze {
    class maze.WBox {
        + WBox()
        + isWall()
    }
  }
  

  namespace maze {
    class maze.main {
        {static} + main()
    }
  }
  

  maze.ABox -up-|> maze.MBox
  maze.DBox -up-|> maze.MBox
  maze.EBox -up-|> maze.MBox
  maze.MBox .up.|> graph.Vertex
  maze.MBox .up.|> maze.model.MazeBoxModel
  maze.MBox o-- maze.Maze : maze
  maze.MFactory .up.|> maze.model.MazeFactory
  maze.Maze .up.|> graph.Distance
  maze.Maze .up.|> graph.Graph
  maze.Maze .up.|> maze.model.MazeModel
  maze.Maze o-- maze.ABox : arrival
  maze.Maze o-- maze.DBox : departure
  maze.Maze o-- maze.MFactory : mfactory
  maze.Maze o-- graph.ShortestPaths : shortestPaths
  maze.WBox -up-|> maze.MBox


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
